[package]
name = "rcu_cell"
edition = "2021"
version = "1.2.1"
description = "a lockless rcu cell implementation"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
categories = ["concurrency", "data-structures", "no-std"]
keywords = ["rcu", "lockless", "atomic"]
repository = "https://github.com/Xudong-Huang/rcu_cell"
homepage = "https://github.com/Xudong-Huang/rcu_cell"
documentation = "https://docs.rs/rcu_cell"
license = "LGPL-3.0"
readme = "./README.md"
exclude = [".gitignore", "benches/**"]

[dependencies]
crossbeam-utils = "0.8.20"
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }

[features]
default = ["serde", "std"]
std = []
serde = ["dep:serde"]

[dev-dependencies]
spin = "0.10"
arc-swap = "1.7"
serde_json = { version = "1.0", optional = false }
